[gd_scene load_steps=9 format=3 uid="uid://b47wey1ofehau"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_4nmvy"]
[ext_resource type="Texture2D" uid="uid://c3ggndsrut84b" path="res://assets/mmBkg.png" id="1_58xwi"]
[ext_resource type="Texture2D" uid="uid://dufomvisu6pqw" path="res://assets/x.png" id="3_m3wln"]
[ext_resource type="Texture2D" uid="uid://cr20esxl3cf4q" path="res://assets/start.PNG" id="4_f7re5"]
[ext_resource type="Texture2D" uid="uid://q12d0ghuoqfj" path="res://assets/pageBkgrnd.png" id="5_0u34h"]
[ext_resource type="Texture2D" uid="uid://c34r7hiibn3fy" path="res://assets/IMG_1301.PNG" id="5_8khse"]
[ext_resource type="AudioStream" uid="uid://dkjgpausyhgkv" path="res://assets/sounds/genButon.mp3" id="7_aps55"]
[ext_resource type="AudioStream" uid="uid://3yrmlhsxn6fe" path="res://assets/sounds/MenuSong.wav" id="8_baagu"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nmvy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 802.0
texture = ExtResource("1_58xwi")
expand_mode = 1

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 476.0
offset_right = 564.0
offset_bottom = 654.0
scale = Vector2(0.4, 0.4)
flat = true

[node name="instructions" type="Button" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 533.0
offset_right = 506.0
offset_bottom = 605.0
flat = true

[node name="startPage" type="Sprite2D" parent="."]
position = Vector2(348, 558)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_f7re5")

[node name="instructionPage" type="Sprite2D" parent="."]
position = Vector2(348, 556)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_8khse")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 165.0
offset_top = 24.0
offset_right = 977.0
offset_bottom = 625.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = -309.0
offset_top = -334.0
offset_right = 1080.0
offset_bottom = 687.0
texture = ExtResource("5_0u34h")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 810.0
offset_top = 503.0
offset_right = 1418.0
offset_bottom = 1111.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("3_m3wln")
flat = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -7.0
offset_top = 19.0
offset_right = 365.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Welcome to Fortified Fists!
 You have found the legendary scroll (magazine) to turn yourself into a weapon able to block ANYTHING!!!!"
autowrap_mode = 2

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -8.0
offset_top = 136.0
offset_right = 350.0
offset_bottom = 718.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "
First, your opponents will perform a set of warmups indcating the direction of their atack, then they will launch heir assult!

All you need to do is block up, down, left, or right at the correct time to defeat them!




"
autowrap_mode = 2

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 416.0
offset_top = 263.0
offset_right = 827.0
offset_bottom = 571.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Don't get discuraged, even masters need practice!

Now you must go
 and challenge the world
 with your new power..."
autowrap_mode = 2

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 413.0
offset_top = 46.0
offset_right = 754.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Up: W or arrow up
Right: D or arrow Right
Down: S or arrow Down
Left: A or arrow Left
"
autowrap_mode = 2

[node name="butPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_aps55")

[node name="menuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_baagu")
volume_db = -8.0
autoplay = true

[node name="sceneChange" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="sceneChange" to="." method="_on_scene_change_timeout"]
